--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "axios": "^0.26.1",
     "blob": "^0.1.0",
     "form-data": "^4.0.0",
-    "fs-blob-store": "^6.0.0"
+    "fs-blob-store": "^6.0.0",
+    "js-yaml": "^4.1.0"
   }
 }
